--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
 
     <header>
 
-        <nav>
+        <section class="nav">
             <div class="logo">Header Logo</div>
             <ul>
                 <li><a href="#">link one</a></li>
                 <li><a href="#">link two</a></li>
                 <li><a href="#">link three</a></li>
             </ul>
-        </nav>
+        </section>
 
         <section class="hero">
             <div class="left">
-                <div class="top">
-                    <h1>This website is awesome</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloremque consectetur, sunt eius fuga quas aspernatur eaque. Sed, dolor maxime!</p>
-                </div>
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloremque consectetur, sunt eius fuga quas aspernatur eaque. Sed, dolor maxime!</p>
                 <button>Sign Up</button>
             </div>
             <div class="right">
-                <img src="" alt="">
+                <img src="resources/code.jpeg" alt="">
             </div>
         </section>
 
