expanded header styling & started main styling

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         <section class="info">
             <h2>Some random information.</h2>
             <div class="items">
-                <div class="item">
-                    <a href=""><img src="" alt=""></a>
+                <div>
+                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
-                <div class="item">
-                    <a href=""><img src="" alt=""></a>
+                <div>
+                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
-                <div class="item">
-                    <a href=""><img src="" alt=""></a>
+                <div>
+                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
-                <div class="item">
-                    <a href=""><img src="" alt=""></a>
+                <div>
+                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
