--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             <h2>Some random information.</h2>
             <div class="items">
                 <div>
-                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
+                    <a href=""><img src="resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div>
-                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
+                    <a href=""><img src="resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div>
-                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
+                    <a href=""><img src="resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div>
-                    <a href=""><img src="/resources/code.jpeg" alt=""></a>
+                    <a href=""><img src="resources/code.jpeg" alt=""></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
