--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
         <section class="hero">
             <div class="left">
-                <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloremque consectetur, sunt eius fuga quas aspernatur eaque. Sed, dolor maxime!</p>
+                <div class="top">
+                    <h1>This website is awesome</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloremque consectetur, sunt eius fuga quas aspernatur eaque. Sed, dolor maxime!</p>
+                </div>
                 <button>Sign Up</button>
             </div>
             <div class="right">
@@ -65,17 +67,15 @@
             <p class="quote-text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam eius enim ratione consectetur accusantium dolor laudantium ea distinctio non unde.
             </p>
-            <p class="quote-author">Thor, son of Odin</p>
+            <p class="quote-author">Thor, God of Thunder</p>
         </section>
 
         <section class="action">
-            <div class="alert">
                 <div class="alert-text">
                     <h3>Call to action! It's time!</h3>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <button class="alert-button">Sign Up</button>
-            </div>
         </section>
 
     </main>
@@ -83,7 +83,8 @@
     <!-- footer content -->
 
     <footer>
-        <small>Copyright &copy; The Odin Project 2022</small>
+        <small>Copyright &copy; The Odin Project 2022</small><br>
+        <small>Photo by Chris Reid</small>
     </footer>
 
 </body>
